Cherry-pick e7b60434701b. rdar://problem/100283905

REGRESSION (iOS 15.5): Angular Materials style triggers poor performance on a long scrolling page
    https://bugs.webkit.org/show_bug.cgi?id=241458
    <rdar://95287714>

    Reviewed by Tim Horton.

    Batch scrolling updates for sub-scrollers from the UI process to the web process to avoid getting
    backed up doing expensive compositing updates when the web process receives a flood of scroll update
    IPC messages.

    RemoteScrollingCoordinatorProxy can use ScrollingTree's existing ability to coalesce updates,
    relying on a reply to the async IPC to know when the web process has finished handling the previous
    update.

    I tried to make an API test for this, but failed; it would need to detect when the web process
    handles a stream of "did scroll" IPC messages, and would need to scroll content that is very slow to
    update. scroll events can't be used as a signal for how many scroll updates the web process
    receives.

    * Source/WebCore/page/scrolling/ScrollingTree.cpp:
    (WebCore::ScrollingTree::hasPendingScrollUpdates):
    * Source/WebCore/page/scrolling/ScrollingTree.h:
    * Source/WebKit/UIProcess/RemoteLayerTree/RemoteScrollingCoordinatorProxy.cpp:
    (WebKit::RemoteScrollingCoordinatorProxy::scrollingTreeNodeDidScroll):
    (WebKit::RemoteScrollingCoordinatorProxy::sendScrollingTreeNodeDidScroll):
    (WebKit::RemoteScrollingCoordinatorProxy::receivedLastScrollingTreeNodeDidScrollReply):
    * Source/WebKit/UIProcess/RemoteLayerTree/RemoteScrollingCoordinatorProxy.h:
    * Source/WebKit/WebProcess/WebPage/RemoteLayerTree/RemoteScrollingCoordinator.h:
    * Source/WebKit/WebProcess/WebPage/RemoteLayerTree/RemoteScrollingCoordinator.messages.in:
    * Source/WebKit/WebProcess/WebPage/RemoteLayerTree/RemoteScrollingCoordinator.mm:
    (WebKit::RemoteScrollingCoordinator::scrollPositionChangedForNode):

    Canonical link: https://commits.webkit.org/253015@main

Canonical link: https://commits.webkit.org/252432.464@safari-7614.2.9.0-branch